--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+<meta name="facebook-domain-verification" content="lqtvl3kv1wvylbx1lw6su6hv39y0gn" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sabor a Venezuela | Canoas - RS</title>
   <meta name="description" content="Sabor a Venezuela em Canoas - RS. Arepas, tequeños, empanadas e mais. Feito com amor e tradição venezuelana.">
